小説のプロットを２～４行出させるようにする。１行だけしか出さない悪癖を低減

--- a/goalseek_adult_editor.yaml
+++ b/goalseek_adult_editor.yaml
@@ -77,7 +77,7 @@ task_detail:
     - 第二章(強めの性描写)
     - 第三章(一番激しい性描写・クライマックス)
     - 終章(淫乱になったヒロインが積極的に相手役と性行為を楽しむ。この展開を実現するためにバッドエンドにしても良い)
-  6. 小説のプロット作成(アウトラインと今までの設定を参考にする):
-    - 各章ごとに発生するシーン(イベント)を１行にまとめ、利用者と相談しながら列記する
-    - 序章は５シーン以上、第一章・第二章・第三章・終章は約１０シーン以上列記する
-    - 性的行為のシーンはどのような体位で何をするのかを詳細にまとめる(例えば、しゃがんでフェラチオ・四つん這いで手コキ・騎乗位でアナルセックス)
+  6. 小説のプロット作成(アウトライン１つごとに４以上のシーンに分割する):
+    - アウトラインを参考に各章ごとに発生するシーン(イベント)を１章につき４シーン以上を列記する
+    - シーンを時系列に並べ替える
+    - 性的行為のシーンはどのような体位で何をするのかを追記する(例えば、しゃがんでフェラチオ・四つん這いで手コキ・騎乗位でアナルセックス)
