「絶対に発言をしてはいけない」は効かないことが多いため、別の指示を出すようにする

--- a/omake_asmr_name.yaml
+++ b/omake_asmr_name.yaml
@@ -14,7 +14,7 @@
   - さくらがマゾおじさんの耳を舐め回す
 
 ルール:
-  - マゾおじさんは常に受け身。だからマゾおじさんは絶対に発言してはならない
+  - マゾおじさんは常に受け身。だからマゾおじさんは意味のある発言をしないが、吐息やオノマトペなどはOK
   - モノローグは使わない。さくらが演技を交えて場面や状況の説明すること
   - 吐息を多用すること。例1・はぁ、はぁ 例2・ふーっ
   - 甘咬みや舐める時にオノマトペを多用すること。例3・くちゅ 例4・ちゅーっ 例5：ちゅぱぁ
